--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Vidar Eldøy <vidar@eldoy.com>",
   "license": "MIT",
   "dependencies": {
+    "conficurse": "^0.3.6",
     "furu": "^0.1.20"
   }
 }
