--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Low code CMS System",
   "main": "index.js",
   "scripts": {
-    "test": "echo 'no test runner installed'"
+    "test": "nodemon -q -e '*' -i docs --exec spekk"
   },
   "repository": {
     "type": "git",
@@ -13,7 +13,10 @@
   "author": "Vidar Eldøy <vidar@eldoy.com>",
   "license": "MIT",
   "dependencies": {
-    "conficurse": "^0.3.6",
-    "furu": "^0.1.20"
+    "conficurse": "^0.3.9",
+    "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "spekk": "^0.2.2"
   }
 }
