--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "conficurse": "^0.3.9",
+    "haka": "^0.13.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
