--- a/spec/data/schema/documents/all.yml
+++ b/spec/data/schema/documents/all.yml
@@ -16,9 +16,9 @@ fields:
   bool:
     required: true
     type: bool
-  text:
+  textarea:
     required: true
-    type: text
+    type: textarea
   file:
     required: true
     type: file
