Add support for db references

--- a/app/schema/documents/item.yml
+++ b/app/schema/documents/item.yml
@@ -60,3 +60,7 @@ fields:
     required: true
     type: hidden
     value: something
+  reference:
+    required: true
+    type: radio
+    source: tag
