--- a/app/schema/documents/item.yml
+++ b/app/schema/documents/item.yml
@@ -5,63 +5,66 @@ filters:
 actions:
   - find
 fields:
-  text:
+  name:
     required: true
     type: text
-  email:
-    required: true
-    type: email
-  password:
-    required: true
-    type: password
-  number:
-    required: true
-    type: number
-  bool:
-    required: true
-    type: bool
-    options:
-      - 'false': No
-      - 'true': Yes
-  textarea:
-    required: true
-    type: textarea
-  file:
-    required: true
-    type: file
-    preview:
-      size: 100
-  date:
-    required: true
-    type: date
-  color:
-    required: true
-    type: color
-  checkbox:
-    type: checkbox
-    options:
-      - juice
-      - meat
-      - milk
-  radio:
-    required: true
-    type: radio
-    options:
-      - sun
-      - moon
-      - sea
-  select:
-    required: true
-    type: select
-    options:
-      - spain
-      - norway
-      - germany
-  hidden:
-    required: true
-    type: hidden
-    value: something
-  reference:
-    required: true
-    type: radio
-    source: tag
+  # text:
+  #   required: true
+  #   type: text
+  # email:
+  #   required: true
+  #   type: email
+  # password:
+  #   required: true
+  #   type: password
+  # number:
+  #   required: true
+  #   type: number
+  # bool:
+  #   required: true
+  #   type: bool
+  #   options:
+  #     - 'false': No
+  #     - 'true': Yes
+  # textarea:
+  #   required: true
+  #   type: textarea
+  # file:
+  #   required: true
+  #   type: file
+  #   preview:
+  #     size: 100
+  # date:
+  #   required: true
+  #   type: date
+  # color:
+  #   required: true
+  #   type: color
+  # checkbox:
+  #   type: checkbox
+  #   options:
+  #     - juice
+  #     - meat
+  #     - milk
+  # radio:
+  #   required: true
+  #   type: radio
+  #   options:
+  #     - sun
+  #     - moon
+  #     - sea
+  # select:
+  #   required: true
+  #   type: select
+  #   options:
+  #     - spain
+  #     - norway
+  #     - germany
+  # hidden:
+  #   required: true
+  #   type: hidden
+  #   value: something
+  # reference:
+  #   required: true
+  #   type: radio
+  #   source: tag
