--- a/app/schema/documents/item.yml
+++ b/app/schema/documents/item.yml
@@ -64,7 +64,7 @@ fields:
   #   required: true
   #   type: hidden
   #   value: something
-  # reference:
-  #   required: true
-  #   type: radio
-  #   source: tag
+  reference:
+    required: true
+    type: radio
+    source: tag
